feat: add error handling page and update web.xml for custom error responses; enhance Khalti payment integration and improve order processing logic